# gestao-parceiros

./: .env.example  .gitignore  Dockerfile  ESTRUTURA.md  ESTRUTURA_BD.md  GUIA_RAPIDO.md  MANUAL.md  README.md  app.py  config.ini  desktop.py  disagua.db  docker-compose.yml  export_utils.py  iniciar.py  main.py  models.py  pyproject.toml  requirements.txt  sistema_entregas.py  version.py
app/: config.py  deps.py  main.py  models.py
backend/: app.py  gestao_parceiros.db  models.py
config/: __init__.py  logging_config.py  settings.py
controllers/: associacao_controller.py  base_controller.py  comprovante_controller.py  config_controller.py  financeiro_controller.py  loja_controller.py  parceiro_controller.py  relatorio_controller.py  usuario_controller.py
data/: entregas.db
database/: db_manager.py  gestao_parceiros.db
docs/: ENDPOINTS.md  ESTRUTURA_BD.md  INDICE.md  README.md  deploy-flow.md  interface-update-checklist.md  static-assets.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
models/: __init__.py  associacao.py  base_model.py  comprovante.py  database.py  database_manager.py  loja.py  parceiro.py  resumo_financeiro.py  usuario.py
projeto/: main.py
scripts/: gerar_recibo.py  import_excel.py  package_app.py  train_receipt_model.py
services/: __init__.py  parceiro_service.py
static/: style.css
templates/: _nav.html  account.html  comprovantes.html  conectar.html  index.html  login.html  lojas.html  parceiros.html  relatorios.html  users.html
utils/: logger.py  (+10 more)
(+152 files in other folders)
