[project]
name = "gestao-parceiros"
version = "0.1.0"
description = "API FastAPI para gestão de parceiros/lojas/marcas, ciclos mensais e comprovantes"
authors = [{name="Rafa"}]
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlmodel = "^0.0.22"
psycopg-binary = "^3.2.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
ruff = "^0.6.9"
httpx = "^0.27.2"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "-q"
